contact info added

--- a/index.html
+++ b/index.html
@@ -40,6 +40,13 @@
       <li>Receive notifications when new content is published</li>
     </ul>
 
+    <h2 class="text-center">Contact Us</h2>
+    <p>You can contact to developers using following communication channels</p>
+    <ul>
+      <li><a href="#">admin@mmsoftware100.com</a></li>
+      <li><a href="#">+959681148976</a></li>
+    </ul>
+
   </div>
 </body>
 </html>
